# age_and_gender_detection

./: README.md  pyproject.toml
age-and-gender-detection/: server.py
age_and_gender_detection/: model.py  server.py
