[project]
name = "age-and-gender-detection"
version = "0.1.0"
description = "Age and Gender Classification"
authors = [
    {name = "Prasanna",email = "prasanna.lakkur@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (==2.2.4)",
    "onnxruntime (==1.21.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "flask-ml (>=0.2.5,<0.3.0)"
]

[tool.poetry]
package-mode = false # Disable package mode


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
